=== anjuta 2.4.1 ===

2008-04-06  Naba Kumar  <naba@gnome.org>

	* configure.in: Bumped version 2.4.1
	* NEWS: Updated.

	patch from  surenspost@gmail.com:
	* src/about.c: Fixed bug #523068 link in about window doesn't work.
	(backported from trun)

2008-04-07  Johannes Schmid  <jhs@gnome.org>

	* plugins/sourceview/sourceview.c (idocument_cut),
	(idocument_copy), (idocument_paste):
	Block insert-text signal on cut/copy/paste (backport from trunk)

2008-04-06  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/project-wizard/templates/gtkmm.wiz,
	plugins/project-wizard/templates/gtkmm/src/Makefile.am.tpl,
	plugins/project-wizard/templates/gtkmm/src/main.cc,
	plugins/project-wizard/templates/django.wiz,
	plugins/project-wizard/templates/python.wiz,
	plugins/project-wizard/templates/python/configure.ac.tpl,
	plugins/project-wizard/templates/python/src/Makefile.am.tpl,
	plugins/project-wizard/templates/cpp.wiz,
	plugins/project-wizard/templates/cpp/configure.ac.tpl,
	plugins/project-wizard/templates/cpp/src/Makefile.am.tpl,
	plugins/project-wizard/templates/sdl.wiz,
	plugins/project-wizard/templates/sdl/configure.ac.tpl,
	plugins/project-wizard/templates/sdl/src/Makefile.am.tpl,
	plugins/project-wizard/templates/terminal.wiz,
	plugins/project-wizard/templates/terminal/configure.ac.tpl,
	plugins/project-wizard/templates/terminal/src/Makefile.am.tpl,
	plugins/project-wizard/templates/terminal/Makefile.am.tpl,
	plugins/project-wizard/templates/gtk.wiz,
	plugins/project-wizard/templates/gtk/src/main.c,
	plugins/project-wizard/templates/gtk/src/Makefile.am.tpl,
	plugins/project-wizard/templates/minimal.wiz,
	plugins/project-wizard/templates/minimal/configure.ac.tpl,
	plugins/project-wizard/templates/minimal/Makefile.am.tpl,
	plugins/project-wizard/templates/java.wiz,
	plugins/project-wizard/templates/java/configure.ac.tpl,
	plugins/project-wizard/templates/java/src/Makefile.am.tpl,
	plugins/project-wizard/templates/xlib.wiz,